--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
-        >Youtube channel</a
-      >
     </nav>
     <div class="canvas">
       <!-- <a
@@ -29,10 +26,10 @@
         >Back to Home Page</a
       > -->
       <h1>Color Scheme Switcher</h1>
-      <span class="button" id="grey"></span>
+      <span class="button" id="palevioletred"></span>
       <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
-      <span class="button" id="yellow"></span>
+      <span class="button" id="blueviolet"></span>
+      <span class="button" id="olivedrab"></span>
       <h2>
         Try clicking on one of the colors above
         <span>to change the background color of this page!</span>
